--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
 		"vinyl-ftp": "^0.6.1",
 		"webpack": "^5.72.1",
 		"webpack-stream": "^7.0.0"
+	},
+	"dependencies": {
+		"swiper": "^8.4.3"
 	}
 }
